--- a/index.html
+++ b/index.html
@@ -7,6 +7,178 @@
     <title>10-kan-colmar</title>
   </head>
   <body>
-    <h1>Hello Colmar Academy</h1>
+    <header>
+      <nav class="nav-bar">
+        <div class="nav-left">
+          <img src="./assets/images/ic-logo.svg" />
+          <h3>COLMAR<span class="span-nav">ACADEMY</span></h3>
+        </div>
+
+        <div class="nav-right">
+          <ul>
+            <li>On campus</li>
+            <li>Online</li>
+            <li>For companies</li>
+            <li>Sign in</li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+
+    <main>
+      <section class="hero">
+        <div class="hero-item hero-item-1">
+          <img src="./assets/images/banner.jpg" alt="banner" />
+        </div>
+
+        <div class="hero-item hero-item-2">
+          <h1>Learn something new everyday</h1>
+          <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
+          <a href="#" target="”_blank”" class="button"
+            >Start here
+          </a>
+        </div>
+      </section>
+
+      <section class="information">
+        <div class="info-image">
+          <img src="./assets/images/information-main.jpg" />
+          <h2>It doesn't hurt to keep practicing</h2>
+
+          <p>
+            "Curabitur vitae libero in ipsum porttitor consequat. Aliquam et
+            commodo lectus, nec consequat nesque. Sed non accumsan urna.
+            Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur
+            dolor consequat, tristique ligula."
+          </p>
+
+          <sub> Emmanuel, Sr Strategist at Hiring.com </sub>
+        </div>
+
+        <div class="card date">
+          <img
+            src="./assets/images/information-orientation.jpg"
+            alt="orientation date"
+          />
+          <h4>Orientation date</h4>
+          <p>Tue 10/11 & Wed 10/12 8zm-3pm</p>
+          <a href="#">Read more</a>
+        </div>
+
+        <div class="tab campus">
+          <img src="./assets/images/information-campus.jpg" alt="our campus" />
+          <h4>Our campus</h4>
+          <p>Find which campus is close by you.</p>
+          <a href="#">Read more</a>
+        </div>
+
+        <div class="tab guest">
+          <img src="./assets/images/information-guest-lecture.jpg" alt="our guest lecture" />
+          <h4>Our guest lecture</h4>
+          <p>
+            Join a keynote with Oliver Sack about music in medical treatment.
+          </p>
+          <a href="#">Read more</a>
+        </div>
+      </section>
+
+      <section class="course">
+        <h2>Start learning</h2>
+
+        <div class="course-top">
+          <div class="card software-engineering">
+            <img src="./assets/images/course-software.jpg" />
+            <h2>Software engineering</h2>
+            <p>COURSES</p>
+            <p>Web Development, Mobile Development, iOT, APIs</p>
+          </div>
+
+          <div class="card computer-art">
+            <img src="./assets/images/course-computer-art.jpg" />
+            <h2>Computer art</h2>
+            <p>COURSES</p>
+            <p>
+              Imaging & Design, Web Design, Motion Graphics & Visual Effects,
+              Computer Animation
+            </p>
+          </div>
+
+          <div class="card design">
+            <img src="./assets/images/course-design.jpg" />
+            <h2>Design</h2>
+            <p>COURSES</p>
+            <p>User Experience Design, User Research, Visual Design</p>
+          </div>
+        </div>
+
+        <div class="course-bottom">
+          <div class="card data">
+            <img src="./assets/images/course-data.jpg" />
+            <h2>Data</h2>
+            <p>COURSES</p>
+            <p>Data Science, Big Data, SQL, Data Visualization</p>
+          </div>
+
+          <div class="card business">
+            <img src="./assets/images/course-business.jpg" />
+            <h2>Business</h2>
+            <p>COURSES</p>
+            <p>Product Development, Business Development, Startup</p>
+          </div>
+
+          <div class="card marketing">
+            <img src="./assets/images/course-marketing.jpg" />
+            <h2>Marketing</h2>
+            <p>COURSES</p>
+            <p>Analytics, Content Marketing, Mobile Marketing</p>
+          </div>
+        </div>
+      </section>
+
+      <section class="thesis">
+        <h1>Thesis exhibit</h1>
+
+        <div class="thesis-left">
+          <video controls auto>
+            <source src="./assets/videos/thesis.mp4" type="video/mp4" />
+            Your browser does not support the video tag.
+          </video>
+
+          <h2>Reimagine urban</h2>
+          <p>
+            "Curabitur vitae libero in ipsum porttitor consequat. Aliquam et
+            commodo lectus, nec consequat nesque. Sed non accumsan urna.
+            Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur
+            dolor consequat, tristique ligula."
+          </p>
+        </div>
+
+        <div class="thesis-right">
+          <div class="fisma">
+            <img src="./assets/images/thesis-fisma.jpg" />
+            <h2>Fisma: Design and Prototype</h2>
+            <p>Designer showcase of new prototype product</p>
+          </div>
+
+          <div class="now-and-then">
+            <h2>Now and then</h2>
+            <p>Research study about New York</p>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer">
+      <div class="footer-left">
+        <sub>©2016 Colmar Academy. All rights reserved.</sub>
+      </div>
+
+      <div class="footer-right">
+        <ul>
+          <li>Terms</li>
+          <li>Privacy</li>
+        </ul>
+      </div>
+    </footer>
   </body>
 </html>
