checkpoint-morning, attempt at css styling

--- a/backup.html
+++ b/backup.html
@@ -7,7 +7,7 @@
     <title>10-kan-colmar</title>
   </head>
   <body>
-    <!-- <header>
+    <header>
       <nav class="nav-bar">
         <div class="nav-left">
           <img src="./assets/images/ic-logo.svg" />
@@ -23,7 +23,7 @@
           </ul>
         </div>
       </nav>
-    </header> -->
+    </header>
 
     <main>
       <section class="hero">
@@ -37,8 +37,9 @@
           <a href="#" target="”_blank”" class="button">Start here </a>
         </div>
       </section>
+      
 
-      <!-- <section class="information">
+      <section class="information">
         <div class="info-image">
           <img src="./assets/images/information-main.jpg" />
           <h2>It doesn't hurt to keep practicing</h2>
@@ -180,6 +181,6 @@
         <p>Terms</p>
         <p>Privacy</p>
       </div>
-    </footer> -->
+    </footer>
   </body>
 </html>
