--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>10-kan-colmar</title>
   </head>
   <body>
-    <!-- <header>
+    <header>
       <nav class="nav-bar">
         <div class="nav-left">
           <img src="./assets/images/ic-logo.svg" />
@@ -23,23 +23,29 @@
           </ul>
         </div>
       </nav>
-    </header> -->
+    </header>
 
     <main>
+      <!-- This is hero section. -->
       <section class="hero">
-        <div class="hero-item hero-item-1">
-          <img src="./assets/images/banner.jpg" alt="banner" />
-        </div>
+        <img src="./assets/images/banner.jpg" alt="banner" />
 
-        <div class="hero-item hero-item-2">
-          <h1>Learn something new everyday</h1>
+        <div class="hero-item">
+          <h1>
+            Learn something<br />
+            new everyday
+          </h1>
           <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
           <a href="#" target="”_blank”" class="button">Start here </a>
         </div>
+
+        <!-- This is hero-mobile section. -->
       </section>
 
-      <!-- <section class="information">
-        <div class="info-image">
+      <!-- This is information section. -->
+      <section class="information">
+        <!-- This is Box1. -->
+        <div class="info-left">
           <img src="./assets/images/information-main.jpg" />
           <h2>It doesn't hurt to keep practicing</h2>
 
@@ -53,55 +59,75 @@
           <sub> Emmanuel, Sr Strategist at Hiring.com </sub>
         </div>
 
-        <div class="card date">
-          <img
-            src="./assets/images/information-orientation.jpg"
-            alt="orientation date"
-          />
-          <h4>Orientation date</h4>
-          <p>Tue 10/11 & Wed 10/12 8zm-3pm</p>
-          <a href="#">Read more</a>
-        </div>
+        <!-- This is Box2. -->
 
-        <div class="tab campus">
-          <img src="./assets/images/information-campus.jpg" alt="our campus" />
-          <h4>Our campus</h4>
-          <p>Find which campus is close by you.</p>
-          <a href="#">Read more</a>
-        </div>
+        <div class="info-right">
+          <div class="tab date">
+            <img
+              src="./assets/images/information-orientation.jpg"
+              alt="orientation date"
+            />
+            <div class="tab-text">
+              <h4>Orientation date</h4>
+              <p>Tue 10/11 & Wed 10/12 8zm-3pm</p>
+              <a href="#">Read more</a>
+            </div>
+          </div>
 
-        <div class="tab guest">
-          <img
-            src="./assets/images/information-guest-lecture.jpg"
-            alt="our guest lecture"
-          />
-          <h4>Our guest lecture</h4>
-          <p>
-            Join a keynote with Oliver Sack about music in medical treatment.
-          </p>
-          <a href="#">Read more</a>
+          <div class="tab campus">
+            <img
+              src="./assets/images/information-campus.jpg"
+              alt="our campus"
+            />
+            <div class="tab-text">
+              <h4>Our campus</h4>
+              <p>Find which campus is close by you.</p>
+              <a href="#">Read more</a>
+            </div>
+          </div>
+
+          <div class="tab guest">
+            <img
+              src="./assets/images/information-guest-lecture.jpg"
+              alt="our guest lecture"
+            />
+            <div class="tab-text">
+              <h4>Our guest lecture</h4>
+              <p>
+                Join a keynote with Oliver Sack about music in medical
+                treatment.
+              </p>
+              <a href="#">Read more</a>
+            </div>
+          </div>
         </div>
       </section>
 
+      <!-- This is course srction. -->
       <section class="course">
         <h2>Start learning</h2>
 
+        <!-- This is course-top. -->
         <div class="course-top">
           <div class="card software-engineering">
             <img src="./assets/images/course-software.jpg" />
-            <h2>Software engineering</h2>
-            <p>COURSES</p>
-            <p>Web Development, Mobile Development, iOT, APIs</p>
+            <div class="card-text">
+              <h2>Software engineering</h2>
+              <p>COURSES</p>
+              <p>Web Development, Mobile Development, iOT, APIs</p>
+            </div>
           </div>
 
           <div class="card computer-art">
             <img src="./assets/images/course-computer-art.jpg" />
-            <h2>Computer art</h2>
-            <p>COURSES</p>
-            <p>
-              Imaging & Design, Web Design, Motion Graphics & Visual Effects,
-              Computer Animation
-            </p>
+            <div class="card-text">
+              <h2>Computer art</h2>
+              <p>COURSES</p>
+              <p>
+                Imaging & Design, Web Design, Motion Graphics & Visual Effects,
+                Computer Animation
+              </p>
+            </div>
           </div>
 
           <div class="card design">
@@ -136,17 +162,20 @@
         </div>
       </section>
 
+      <!-- This is thesis section. -->
+
       <section class="thesis">
         <h2>Thesis exhibit</h2>
 
         <div class="thesis-in">
+          <!-- This is left-box. -->
           <div class="thesis-left">
             <video controls auto>
               <source src="./assets/videos/thesis.mp4" type="video/mp4" />
               Your browser does not support the video tag.
             </video>
 
-            <h2>Reimagine urban</h2>
+            <h3>Reimagine urban</h3>
             <p>
               "Curabitur vitae libero in ipsum porttitor consequat. Aliquam et
               commodo lectus, nec consequat nesque. Sed non accumsan urna.
@@ -155,16 +184,22 @@
             </p>
           </div>
 
+          <!-- This is right-box. -->
           <div class="thesis-right">
-            <div class="fisma">
+            <div class="thesis-tab fisma">
               <img src="./assets/images/thesis-fisma.jpg" />
-              <h2>Fisma: Design and Prototype</h2>
-              <p>Designer showcase of new prototype product</p>
+              <div class="thesis-text">
+                <h3>Fisma: Design and Prototype</h3>
+                <p>Designer showcase of new prototype product</p>
+              </div>
             </div>
 
-            <div class="now-and-then">
-              <h2>Now and then</h2>
-              <p>Research study about New York</p>
+            <div class="thesis-tab now-and-then">
+              <img src="./assets/images/thesis-now-and-then.jpg" />
+              <div class="thesis-text">
+                <h3>Now and then</h3>
+                <p>Research study about New York</p>
+              </div>
             </div>
           </div>
         </div>
@@ -180,6 +215,6 @@
         <p>Terms</p>
         <p>Privacy</p>
       </div>
-    </footer> -->
+    </footer>
   </body>
 </html>
