checkpoint-afternoon, start mobile

--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
             <li>Sign in</li>
           </ul>
         </div>
+
+        <!-- This is nav-mobile section. -->
+        <nav class="nav-mobile">
+          <img src="./assets/images/ic-logo.svg" alt="logo" />
+          <img src="./assets/images/ic-on-campus.svg" alt="on-campus" />
+          <img src="./assets/images/ic-online.svg" alt="online" />
+          <img src="./assets/images/ic-login.svg" alt="ic-login" />
+        </nav>
       </nav>
     </header>
 
