add mobile_almost finish

--- a/index.html
+++ b/index.html
@@ -48,6 +48,18 @@
         </div>
 
         <!-- This is hero-mobile section. -->
+        <div class="hero-mobile">
+          <img src="./assets/images/banner.jpg" alt="banner" />
+          <div class="hero-mobile-text">
+            <h3>
+              Learn something<br />
+              new everyday
+            </h3>
+            <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h5>
+            <a href="#" target="”_blank”" class="button">Start here </a>
+          </div>
+          </div>
+        </div>
       </section>
 
       <!-- This is information section. -->
@@ -109,6 +121,43 @@
             </div>
           </div>
         </div>
+
+        <!-- This is info-mobile. -->
+        <div class="info-mobile">
+          <div class="info-mobile-card">
+            <img
+              src="./assets/images/information-orientation-mobile.jpg"
+              alt="orientation"
+            />
+            <div class="tab-text">
+              <h4>Orientation date</h4>
+              <p>Tue 10/11 & Wed 10/12 8zm-3pm</p>
+              <a href="#">Read more</a>
+            </div>
+          </div>
+
+          <div class="info-mobile-card">
+            <img
+              src="./assets/images/information-campus-mobile.jpg"
+              alt="orientation"
+            />
+            <h4>Our campus</h4>
+            <p>Find which campus is close by you.</p>
+            <a href="#">Read more</a>
+          </div>
+
+          <div class="info-mobile-card">
+            <img
+              src="./assets/images/information-guest-lecture-mobile.jpg"
+              alt="orientation"
+            />
+            <h4>Our guest lecture</h4>
+            <p>
+              Join a keynote with Oliver Sack about music in medical treatment.
+            </p>
+            <a href="#">Read more</a>
+          </div>
+        </div>
       </section>
 
       <!-- This is course srction. -->
@@ -168,12 +217,22 @@
             <p>Analytics, Content Marketing, Mobile Marketing</p>
           </div>
         </div>
+
+        <!-- This is course-mobile -->
+        <div class="course-mobile">
+          <h3>Software engineering</h3>
+          <h3>Computer art</h3>
+          <h3>Design</h3>
+          <h3>Data</h3>
+          <h3>Business</h3>
+          <h3>Marketing</h3>
+        </div>
       </section>
 
       <!-- This is thesis section. -->
 
       <section class="thesis">
-        <h2>Thesis exhibit</h2>
+        <h2>Thesis exhibits</h2>
 
         <div class="thesis-in">
           <!-- This is left-box. -->
@@ -211,9 +270,18 @@
             </div>
           </div>
         </div>
+
+        <!-- This is thesis mobile -->
+        <div class="thesis-mobile">
+          <video controls auto>
+            <source src="./assets/videos/thesis.mp4" type="video/mp4" />
+            Your browser does not support the video tag.
+          </video>
+        </div>
       </section>
     </main>
 
+    <!-- This is footer section -->
     <footer class="footer">
       <div class="footer-left">
         <p>©2016 Colmar Academy. All rights reserved.</p>
