--- a/index.html
+++ b/index.html
@@ -58,7 +58,6 @@
             <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h5>
             <a href="#" target="”_blank”" class="button">Start here </a>
           </div>
-          </div>
         </div>
       </section>
 
@@ -97,8 +96,7 @@
           <div class="tab campus">
             <img
               src="./assets/images/information-campus.jpg"
-              alt="our campus"
-            />
+              alt="our campus"/>
             <div class="tab-text">
               <h4>Our campus</h4>
               <p>Find which campus is close by you.</p>
